# ghostwire-refractory

./: .editorconfig  .env.example  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  APIDOC.md  APIDOC.md.bak  ARCHITECTURE.md  ARCHITECTURE.md.bak  BENCHMARKING_SPEC.md  CONTRIBUTING.md  CONTRIBUTING.md.bak  LICENSE.md  Makefile  README.md  README_simple.md  ghostwire-benchmarking.py  ghostwire-client.py  ghostwire-controller.py  ghostwire-rag_benchmark.py  ghostwire-retrieval_benchmark.py  ghostwire_benchmarking.py  ghostwire_client.py  ghostwire_controller.py  ghostwire_operator_console.py  ghostwire_rag_benchmark.py  ghostwire_retrieval_benchmark.py  ghostwire_summarization_benchmark.py  main.py  package.json  prometheus_client.py  pyproject.toml  summarization_benchmark_results.csv  test_ghostwire_benchmarks.py  token_benchmark_report.json
.github/: .gitignore  AGENTS.md  GEMINI.md  GHOSTWIRE_THEME.md  QWEN.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/FLAVOR_TEXT/: GHOSTWIRE_LORE.md  GHOSTWIRE_LORE_1.md  GHOSTWIRE_README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/chatmodes/: ghostwire.chatmode.md
.github/prompts/: openspec-archive.prompt.md
.github/workflows/: ci.yml  deploy-site.yml  opencode.yml  refractory.yml  release.yml  update-uv-lock.yml
GHOSTWIRE/: GHOSTWIRE_GOALS.md  Modelfile  OPEN_SPEC_EMBEDDED_SCRIPT.llm  OPEN_SPEC_LLM_CIPHER.llm  OPEN_SPEC_STRUCTURED_MARKUP.yaml
GHOSTWIRE/FLAVOR_TEXT/: GHOSTWIRE.md  GHOSTWIRE_FLAVOR.md  GHOSTWIRE_LORE.md  GHOSTWIRE_LORE_1.md  GHOSTWIRE_LORE_2.md  GHOSTWIRE_OPERATOR_QUICKSTART_MANUAL.md  GHOSTWIRE_README.md
GHOSTWIRE_GPT/: GHOSTWIRE_THEME.md
GHOSTWIRE_GPT/FLAVOR_TEXT/: GHOSTWIRE_LORE_1.txt  GHOSTWIRE_LORE_2.md  GHOSTWIRE_OPERATOR_QUICKSTART_MANUAL.md
LEGACY/: ghostwire_benchmarking.py  ghostwire_controller.py  ghostwire_operator_console.py  ghostwire_rag_benchmark.py  ghostwire_retrieval_benchmark.py  ghostwire_summarization_benchmark.py  test_ghostwire_benchmarks.py
docs/: APIDOC.md  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARKING_SPEC.md  QUICK_START_VERIFY.md  STYLE.md.bak  STYLE_MACHINE.md  TOKEN_OPTIMIZATION_SUMMARY.md  benchmark.md  style.txt
docs/llm/: benchmarking_system.md  development_operations.md  project_overview.md  project_structure.md  technical_implementation.md
openspec/: AGENTS.md  dashboard.md  project.md  specs.md
openspec/changes/add-benchmark-tests/: proposal.md  tasks.md
openspec/changes/add-contributing-guidance/: proposal.md  tasks.md
openspec/changes/add-document-ingestion/: proposal.md  tasks.md
openspec/changes/add-github-pages-site/: proposal.md  tasks.md
openspec/changes/add-llama-deployment/: tasks.md
openspec/changes/add-local-dev-helpers/: proposal.md  tasks.md
openspec/changes/add-makefile-dev-targets/: proposal.md  tasks.md
openspec/changes/add-opencode-plugins/: tasks.md
openspec/changes/add-openspec-orchestrator/: proposal.md  tasks.md
openspec/changes/add-orchestrator-api-control/: proposal.md  tasks.md
openspec/changes/add-prometheus-metrics/: proposal.md  tasks.md
openspec/changes/add-readme-goals/: proposal.md  tasks.md
openspec/changes/add-sample-data-seeder/: proposal.md  tasks.md
openspec/changes/add-vector-normalize-test/: proposal.md  tasks.md
openspec/changes/implement-logging-optout/: proposal.md  tasks.md
openspec/changes/token-optimization-features/: proposal.md  tasks.md
openspec/specs/api/: spec.md
openspec/specs/auth/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/config/: spec.md
openspec/specs/database/: spec.md
openspec/specs/embedding/: spec.md
openspec/specs/formatting-linting/: design.md  spec.md
openspec/specs/memory/: spec.md
openspec/specs/models/: spec.md
openspec/specs/orchestrator/: design.md  spec.md
openspec/specs/static-site/: design.md  spec.md
openspec/specs/testing/: IMPLEMENTATION_SUMMARY.md  design.md  spec.md
python/: __init__.py
python/benchmarks/: __init__.py  embedding_benchmarks.py  model_comparison_benchmark.py  rag_benchmarks.py  summarization_benchmarks.py
python/client/: operator_console.py
python/ghostwire/: __init__.py  cli.py  logging_config.py  main.py
scripts/: README.md  import_documents.py  llama_deploy.py  markdown_style_fix.py  run_local.sh  seed_sample_data.py  seed_sample_data_cli.py
site/: README.md  astro.config.mjs  package.json
(+156 files in other folders)
