[project]
name = "ghostwire-refractory"
version = "2.0.0"
description = "A neural lattice forged in neon, whispering through the data fog - Refactored"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "hnswlib>=0.8.0",
    "apsw>=3.45.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ghostwire = "ghostwire.main:app"

[tool.setuptools.packages.find]
where = ["python"]
include = ["ghostwire*"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "SIM", "UP"]
