[project]
name = "ghostwire-refractory"
version = "2.0.0"
description = "A cyber‑punk lattice that whispers in neon, refactored for performance and mystique"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "hnswlib>=0.8.0",
    "apsw>=3.45.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "pytest>=7.0.0",
      "prometheus_client>=0.19.0",

]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ghostwire = "ghostwire.cli:main"

[tool.setuptools.packages.find]
where = ["python"]
include = ["ghostwire*"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.uv.dev-dependencies]
black = ">=24.0"
mypy = ">=1.8"
ruff = ">=0.5"
pytest = ">=7.0.0"
pytest-sugar = ">=0.9.0"

# Dev‑only packages for linting, type‑checking, and testing
[tool.ruff.lint]
select = ["E", "W", "F", "I", "SIM", "UP"]
# B008 is disabled because Depends() in function signatures is a standard FastAPI pattern
# C901 is disabled because some API endpoints and console functions are inherently complex
# E501 is disabled because some long string literals in test/benchmark files are acceptable
extend-ignore = ["B008", "C901", "E501"]
