[project]
name = "ghostwire-refractory"
version = "2.0.0"
description = "A cyber‑punk lattice that whispers in neon, refactored for performance and mystique"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "hnswlib>=0.8.0",
    "apsw>=3.45.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "pytest>=7.0.0",
    "prometheus_client>=0.19.0",
    "pyyaml>=6.0",
    "pytest-sugar>=1.1.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-html>=4.1.1",
    "pytest-profiling>=1.8.1",
    "fabric>=3.0.0",
    "mitogen>=0.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ghostwire = "ghostwire.cli:main"

[tool.setuptools.packages.find]
where = ["python"]
include = ["ghostwire*"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"
addopts = ["--maxfail=0", "-ra", "--strict-markers"]
markers = [
    "benchmark: marks tests as benchmark tests",
    "unit: marks tests as unit tests", 
    "integration: marks tests as integration tests"
]

[tool.ruff]
line-length = 88
exclude = [
    "LEGACY/**",
]



# Dev‑only packages for linting, type‑checking, and testing
[tool.ruff.lint]
select = ["E", "W", "F", "I", "SIM", "UP"]
# B008 is disabled because Depends() in function signatures is a standard FastAPI pattern
# C901 is disabled because some API endpoints and console functions are inherently complex
# E501 is disabled because some long string literals in test/benchmark files are acceptable
extend-ignore = ["B008", "C901", "E501"]
